--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<!-- navbar -->
 <nav class="navbar navbar-default">
-  <div class="container-fluid text-center">
+  <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -82,7 +82,7 @@
 		<div class="row">
 			<div class="col-md-3">
 				<div>
-					<img src="assets/img/skin_care_1_thumb.jpg" class="img-responsive">
+					<img src="assets/img/skin_care_1_thumb.jpg" class="img-responsive img-circle">
 				</div>
 				<h4>SKIN CARE</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit sequi facilis ipsum, sed consequatur eligendi aspernatur ullam ipsa laborum voluptatibus unde fuga nihil illum, quo corporis a optio eveniet labore.</p>
@@ -90,7 +90,7 @@
 			</div>
 			<div class="col-md-3">
 				<div>
-					<img src="assets/img/spa_ treatments_thumb.jpg" class="img-responsive">
+					<img src="assets/img/spa_ treatments_thumb.jpg" class="img-responsive img-circle">
 				</div>
 				<h4>SPA TREATMENTS</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro debitis, velit illum animi quidem inventore cumque odit quasi vel. Delectus molestias eligendi aliquam incidunt vel dicta officia sed. Optio, temporibus.</p>
@@ -98,7 +98,7 @@
 			</div>
 			<div class="col-md-3">
 				<div>
-					<img src="assets/img/aromatherapy_1_thumb.jpg" class="img-responsive">
+					<img src="assets/img/aromatherapy_1_thumb.jpg" class="img-responsive img-circle">
 				</div>
 				<h4>AROMATHERAPY</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit sequi facilis ipsum, sed consequatur eligendi aspernatur ullam ipsa laborum voluptatibus unde fuga nihil illum, quo corporis a optio eveniet labore.</p>
@@ -106,7 +106,7 @@
 			</div>
 			<div class="col-md-3">
 				<div>
-					<img src="assets/img/massage_thumb.jpg" class="img-responsive">
+					<img src="assets/img/massage_thumb.jpg" class="img-responsive img-circle">
 				</div>
 				<h4>MASSAGE</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro debitis, velit illum animi quidem inventore cumque odit quasi vel. Delectus molestias eligendi aliquam incidunt vel dicta officia sed. Optio, temporibus.</p>
@@ -119,16 +119,16 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-5">
-				<img src="assets/img/welcom_thumb.jpg" class="img-responsive">
+				<img src="assets/img/welcom_thumb.jpg" class="img-responsive img-rounded">
 			</div>
 			<div class="col-md-7">
 				<h2 class="text-center">WELCOME TO BEAUTY & HAIR</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque a, assumenda ratione molestiae modi magnam tempore minus expedita? Esse unde reprehenderit corporis totam repellat asperiores sint at, architecto aperiam quidem.</p>
 				<ul>
-					<li>Lorem ipsum dolor sit amet</li>
-					<li>Lorem ipsum dolor sit amet</li>
-					<li>Lorem ipsum dolor sit amet</li>
-					<li>Lorem ipsum dolor sit amet</li>
+					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet</li>
+					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet</li>
+					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet</li>
+					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet</li>
 				</ul>
 			</div>
 		</div>
@@ -139,9 +139,31 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h4 class="text-right">ABOUT US</h4>
+				<div class="row">
+					<div class="col-md-6">
+						<img src="assets/img/home1.jpg" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-6 text-right">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias molestiae assumenda voluptatum doloribus, aliquid doloremque qui repellat aperiam minus nam nobis dolore earum esse, perspiciatis adipisci fugiat laudantium ipsa soluta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus repellendus, iste aut deleniti tempore eum quos deserunt facilis sapiente unde</p>
+					</div>
+					<div class="col-md-12">
+						<p class="text-right"> doloremque consequatur optio, impedit molestiae ullam in modi recusandae voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, impedit necessitatibus maxime. Rerum molestiae sequi doloribus sunt nisi voluptates, voluptatibus ipsam obcaecati alias. Consequuntur ex id totam debitis, at quaerat.</p>
+					</div>
+				</div>
 			</div>
 			<div class="col-md-6">
 				<h4>GIFT PROGRAM</h4>
+				<div class="row">
+					<div class="col-md-6 text-left">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias molestiae assumenda voluptatum doloribus, aliquid doloremque qui repellat aperiam minus nam nobis dolore earum esse, perspiciatis adipisci fugiat laudantium ipsa soluta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus repellendus, iste aut deleniti tempore eum quos deserunt facilis sapiente unde</p>
+					</div>
+					<div class="col-md-6">
+						<img src="assets/img/home2.jpg" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-12">
+						<p class="text-left"> doloremque consequatur optio, impedit molestiae ullam in modi recusandae voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, impedit necessitatibus maxime. Rerum molestiae sequi doloribus sunt nisi voluptates, voluptatibus ipsam obcaecati alias. Consequuntur ex id totam debitis, at quaerat.</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -169,6 +191,7 @@
 			<div class="col-md-6">
 				<div class="col-md-6">
 					<h4>PEOPLE ARE TALKING</h4>
+					<span class="comilla">"</span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor modi dolores sunt culpa ducimus ullam exercitationem illo consequuntur vero architecto ipsum dolorum, velit necessitatibus alias natus tenetur, odio autem quae.</span>
 				</div>
 				<div class="col-md-6">
 					<h4>CONTACT US</h4>
@@ -178,6 +201,9 @@
 					<p>17600 Yonge Biggest St, Toronto, L3Y 4Z1</p>
 				</div>
 			</div>
+		</div>
+		<div class="text-center">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima saepe libero, sapiente. Enim nam, in dolore dolorem tempora debitis alias sunt esse molestias.</p>
 		</div>
 	</div>
 </footer>
