--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<img src="assets/img/skin_care_1_thumb.jpg" class="img-responsive img-circle">
 				</div>
 				<h4>SKIN CARE</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit sequi facilis ipsum, sed consequatur eligendi aspernatur ullam ipsa laborum voluptatibus unde fuga nihil illum, quo corporis a optio eveniet labore.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit sequi facilis ipsum, sed consequatur eligendi aspernatur ullam ipsa laborum voluptatibus unde.</p>
 				<a href="#">Read more ...</a>
 			</div>
 			<div class="col-md-3">
@@ -93,7 +93,7 @@
 					<img src="assets/img/spa_ treatments_thumb.jpg" class="img-responsive img-circle">
 				</div>
 				<h4>SPA TREATMENTS</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro debitis, velit illum animi quidem inventore cumque odit quasi vel. Delectus molestias eligendi aliquam incidunt vel dicta officia sed. Optio, temporibus.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro debitis, velit illum animi quidem inventore cumque odit quasi vel. Delectus molestias eligendi aliquam.</p>
 				<a href="#">Read more ...</a>
 			</div>
 			<div class="col-md-3">
@@ -101,7 +101,7 @@
 					<img src="assets/img/aromatherapy_1_thumb.jpg" class="img-responsive img-circle">
 				</div>
 				<h4>AROMATHERAPY</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit sequi facilis ipsum, sed consequatur eligendi aspernatur ullam ipsa laborum voluptatibus unde fuga nihil illum, quo corporis a optio eveniet labore.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit sequi facilis ipsum, sed consequatur eligendi aspernatur ullam ipsa laborum voluptatibus unde.</p>
 				<a href="#">Read more ...</a>
 			</div>
 			<div class="col-md-3">
@@ -109,7 +109,7 @@
 					<img src="assets/img/massage_thumb.jpg" class="img-responsive img-circle">
 				</div>
 				<h4>MASSAGE</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro debitis, velit illum animi quidem inventore cumque odit quasi vel. Delectus molestias eligendi aliquam incidunt vel dicta officia sed. Optio, temporibus.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro debitis, velit illum animi quidem inventore cumque odit quasi vel. Delectus molestias eligendi aliquam.</p>
 				<a href="#">Read more ...</a>
 			</div>
 		</div>
@@ -125,10 +125,10 @@
 				<h2 class="text-center">WELCOME TO BEAUTY & HAIR</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque a, assumenda ratione molestiae modi magnam tempore minus expedita? Esse unde reprehenderit corporis totam repellat asperiores sint at, architecto aperiam quidem.</p>
 				<ul>
-					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet</li>
-					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet</li>
-					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet</li>
-					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet</li>
+					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+					<li><i class="fa fa-cog" aria-hidden="true"></i> Eaque a, assumenda ratione molestiae modi magnam tempore minus expedita?</li>
+					<li><i class="fa fa-cog" aria-hidden="true"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+					<li><i class="fa fa-cog" aria-hidden="true"></i> Eaque a, assumenda ratione molestiae modi magnam tempore minus expedita?</li>
 				</ul>
 			</div>
 		</div>
@@ -147,7 +147,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias molestiae assumenda voluptatum doloribus, aliquid doloremque qui repellat aperiam minus nam nobis dolore earum esse, perspiciatis adipisci fugiat laudantium ipsa soluta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus repellendus, iste aut deleniti tempore eum quos deserunt facilis sapiente unde</p>
 					</div>
 					<div class="col-md-12">
-						<p class="text-right"> doloremque consequatur optio, impedit molestiae ullam in modi recusandae voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, impedit necessitatibus maxime. Rerum molestiae sequi doloribus sunt nisi voluptates, voluptatibus ipsam obcaecati alias. Consequuntur ex id totam debitis, at quaerat.</p>
+						<p class="text-right p-especial"> doloremque consequatur optio, impedit molestiae ullam in modi recusandae voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, impedit necessitatibus maxime. Rerum molestiae sequi doloribus sunt nisi voluptates, voluptatibus ipsam obcaecati alias. Consequuntur ex id totam debitis, at quaerat.</p>
 					</div>
 				</div>
 			</div>
@@ -161,7 +161,7 @@
 						<img src="assets/img/home2.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-12">
-						<p class="text-left"> doloremque consequatur optio, impedit molestiae ullam in modi recusandae voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, impedit necessitatibus maxime. Rerum molestiae sequi doloribus sunt nisi voluptates, voluptatibus ipsam obcaecati alias. Consequuntur ex id totam debitis, at quaerat.</p>
+						<p class="text-left p-especial"> doloremque consequatur optio, impedit molestiae ullam in modi recusandae voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, impedit necessitatibus maxime. Rerum molestiae sequi doloribus sunt nisi voluptates, voluptatibus ipsam obcaecati alias. Consequuntur ex id totam debitis, at quaerat.</p>
 					</div>
 				</div>
 			</div>
@@ -170,7 +170,7 @@
 </section>
 <footer>
 	<div class="container">
-		<div class="row">
+		<div class="row caja-footer">
 			<div class="col-md-6">
 				<h4>FOLLOW US</h4>
 				<div class="row">
@@ -202,7 +202,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="text-center">
+		<div class="text-center caja-footer-2">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima saepe libero, sapiente. Enim nam, in dolore dolorem tempora debitis alias sunt esse molestias.</p>
 		</div>
 	</div>
